--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
             <script>
                 // event handler
                 function chgmessage() {
-                    window.alert("Works");
+                    var name = document.getElementById('cName').value;
+                    document.getElementById('message').innerHTML="Welcome <b>" + name + "</b>!";
                 }
 
                 // event ---> event handler
@@ -198,8 +199,16 @@
             <h1> Practice - Calculate Square</h1>
             Calculating Square:
             <input type="text" id="num" placeholder="Type in a number"> <sup> 2 </sup> =
-            <label id="result"> ? </label>
-
+            <label id="ans" onblur="calculatesqr()"> ? </label>
+            <script>
+                function calculatesqr() {
+                    var x = parseFloat(document.getElementById('num').value);
+                    var square = x * x;
+                    document.getElementById('ans').textContent=square.toFixed(3);
+                }
+                var a = document.getElementById('num');
+                a.addEventListener('blur', calculatesqr, false);
+            </script>
         </div>
 
         <div class="practice">
