--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
                 function calculate() {
                     var n1 = parseInt(document.getElementsByName('num1')[0].value);
                     var n2 = parseInt(document.getElementsByName('num2')[0].value);
+                    if(num.isNaN(num.parseFloat(n))) {
+                        window.alert("Try it again. You should enter a number.")
+                    }
                     // debugging
                     console.log("n1= " + n1)
                     // output
@@ -221,10 +224,18 @@
 
             <input type="button" id="tryit" value="Click and Display"> 
 
-            <div id="message"> 
+            <div id="message1"> 
             </div>
-
-
+            <script>
+                // event handler
+                function tohtml() {
+                    var codes = document.getElementById('code').value;
+                    document.getElementById('message1').innerHTML = codes;
+                }
+                // event 
+                var bE = document.getElementById('tryit');
+                bE.addEventListener('click', tohtml, false);
+            </script>
         </div>
 
         <div class="practice">
