--- a/quiz1.html
+++ b/quiz1.html
@@ -35,6 +35,7 @@
                 <input type="submit" value="submit">
 
             </form>
+            <script src="/js/quiz.js"> </script>
         </div>
 
     </div>
