--- a/index.html
+++ b/index.html
@@ -405,15 +405,34 @@
             <!--  Input number box -->
             <p> N = <input type="number" min="1" max="10" id="inputnumber2"> </p>
             <p>
-                <input type="button" value="Click for multiplication table">
+                <input type="button" id="showtable" value="Click for multiplication table">
             </p>
 
             <!-- output section -->
             <div id="output">
 
-
             </div>
-
+            <script>
+                function showMult() {
+                    var outputlist = "<table>";
+                    var n=document.getElementById('inputnumber2').value;
+                    for(var i=1; i<=n; i++) {
+                        outputlist += "<tr>";
+                        for(var j=1; j<=n; j++) {   
+                            outputlist += "<td>";
+                            // print the formula
+                            var answer = i * j;
+                            outputlist += i + "x" + j + "=" + answer;
+                            outputlist += "</td>";
+                        }
+                        outputlist += "</tr>";
+                    }
+                    outputlist += "</table>"
+                    // put it in the output section
+                    document.getElementById('output').innerHTML=outputlist;
+                }
+                document.getElementById('showtable').addEventListener('click', showMult, false);
+            </script>
         </div>
 
 
@@ -438,7 +457,7 @@
         <div class="practice">
             <h1>Change Attribute -- Rolling a dice </h1>
             <p> <input type="button" id="roll" value="roll" /> </p>
-            <p> <img src="img/die1.png"> </p>
+            <p> <img src="img/die1.png" id="dice"> </p>
             <table>
                 <tr>
                     <th>Result</th>
@@ -459,7 +478,16 @@
                     <td id="r6"></td>
                 </tr>
             </table>
-
+            <script>
+                var stats = [0, 0, 0, 0, 0, 0];
+                function changeImg() {
+                    var num = Math.floor(Math.random()*6+1);
+                    stats[num-1]++;
+                    console.log(stats);
+                    document.getElementById('dice').setAttribute('src', "img/die"+num+".png");
+                }
+                document.getElementById('roll').addEventListener('click', changeImg, false);
+            </script>
         </div>
 
 
