--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             $('p').mouseover(function(){
                 $(this).slideDown();
             });*/
-            $('p').hide();
-            $('h1').click(function(){
-                $(this).parent().children('p').slideToggle();
-            });
+            //$('p').hide();
+            //$('h1').click(function(){
+                //$(this).parent().children('p').slideToggle();
+            //});
             $('input').each(function(){
                 var theID = $(this).attr('id');
                 console.log(theID);
@@ -577,7 +577,7 @@
                         Check in: <input type="date" id="checkin"> Check out: <input type="date" id="checkout">
                     </p>
                     <p>
-                        Number of guest: <input type="number" id="num" min="0" max="5">
+                        Number of guest: <input type="number" id="numguests" min="0" max="5">
                     </p>
                     <p>
                         Room Type: <select id="room">
